fix: trace waterffall z-index is too high

--- a/shell/app/modules/msp/monitor/trace-insight/pages/trace-querier/trace-search-detail.scss
+++ b/shell/app/modules/msp/monitor/trace-insight/pages/trace-querier/trace-search-detail.scss
@@ -6,5 +6,5 @@
   height: 100%;
   overflow: auto;
   background: $white;
-  z-index: 1001;
+  z-index: 100;
 }
